fixed copy button on mobile

--- a/src/components/copy-code/styles.css
+++ b/src/components/copy-code/styles.css
@@ -6,7 +6,5 @@ pre {
 }
 
 pre copy-code-button {
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
+    @apply absolute rtl:container top-3 right-3;
 }
